[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/basic_light1.png" type="Texture" id=1]
[ext_resource path="res://Projectile/lightnin/lightning_spray_varient1.png" type="Texture" id=2]
[ext_resource path="res://Projectile/lightnin/spray/light_spray_chain.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.1427, 1.10282 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 58.6875, 4.25005 )

[sub_resource type="CircleShape2D" id=3]
radius = 19.0263

[node name="RigidBody2D" type="RigidBody2D"]
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="TinyBullet" type="Sprite" parent="."]
position = Vector2( 62, 0 )
scale = Vector2( 0.5, 0.3 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -25, -1 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 83.5, 1 )
scale = Vector2( 5.86626, 4.53383 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 66, -1.52588e-05 )
scale = Vector2( 0.734374, 0.737201 )
texture = ExtResource( 1 )
color = Color( 0.0509804, 0.8, 1, 1 )
energy = 0.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 58.3125, 0 )
shape = SubResource( 2 )

[node name="detect_circe_2D" type="Area2D" parent="."]
position = Vector2( 127, 0 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_circe_2D"]
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="detect_circe_2D" to="." method="_on_detect_circe_2D_body_entered"]
